--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: 'Migrate All Declared Secrets to GCP (TF_VAR_ prefix removed, GCP create commented out)'
+name: 'Migrate All Declared Secrets (TF_VAR_ prefix removed, GCP create commented out)'
 
 on:
   workflow_dispatch:
@@ -32,123 +32,127 @@ jobs:
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
 
-      - name: Migrate All Declared Secrets (TF_VAR_ prefix removed, GCP create commented out)
+      - name: Migrate Declared Secrets (dry run)
         shell: bash
         run: |
           echo "Starting declared secrets migration (dry run)..."
 
           secrets=(
+            "ANTHROPIC_API_KEY-prod"
+            "ANTHROPIC_API_KEY-staging"
+            "CLOUDFLARE_CLIENT_ID-staging"
+            "CLOUDFLARE_CLIENT_SECRET-staging"
+            "CLOUDFLARE_ORG-staging"
+            "CONSULT_CLERK_PUBLISHABLE_KEY-prod"
+            "CONSULT_CLERK_PUBLISHABLE_KEY-staging"
+            "CONSULT_CLERK_SECRET_KEY-prod"
+            "CONSULT_CLERK_SECRET_KEY-staging"
+            "COPILOT_CHROME_EXTENSION_PRIVATE_KEY-staging"
+            "DB_READONLY_USER_PASSWORD-prod"
+            "DB_READONLY_USER_PASSWORD-staging"
+            "DD_API_KEY-prod"
+            "DD_API_KEY-staging"
             "LINEAR_API_KEY"
             "LINEAR_CLIENT_ID"
             "LINEAR_CLIENT_SECRET"
+            "OCR_PROCESSOR_ID-prod"
+            "OCR_PROCESSOR_ID-staging"
+            "PULUMI_APP_CONFIG_PASSPHRASE-prod"
+            "PULUMI_APP_CONFIG_PASSPHRASE-staging"
+            "PULUMI_CICD_GOOGLE_CREDENTIALS-prod"
+            "PULUMI_CICD_GOOGLE_CREDENTIALS-staging"
+            "PULUMI_CLOUDFLARE_API_TOKEN-prod"
+            "PULUMI_CLOUDFLARE_API_TOKEN-staging"
+            "SES_EVENT_INNGEST_WEBHOOK_SECRET-prod"
+            "SES_EVENT_INNGEST_WEBHOOK_SECRET-staging"
             "SLACK_WEBHOOK_URL"
-            "DB_READONLY_USER_PASSWORD_prod"
-            "DB_READONLY_USER_PASSWORD_staging"
-            "OCR_PROCESSOR_ID_prod"
-            "OCR_PROCESSOR_ID_staging"
-            "PULUMI_APP_CONFIG_PASSPHRASE_prod"
-            "PULUMI_APP_CONFIG_PASSPHRASE_staging"
-            "PULUMI_CICD_GOOGLE_CREDENTIALS_prod"
-            "PULUMI_CICD_GOOGLE_CREDENTIALS_staging"
-            "PULUMI_CLOUDFLARE_API_TOKEN_prod"
-            "PULUMI_CLOUDFLARE_API_TOKEN_staging"
-            "CLOUDFLARE_ORG_staging"
-            "CLOUDFLARE_CLIENT_ID_staging"
-            "CLOUDFLARE_CLIENT_SECRET_staging"
-            "SES_EVENT_INNGEST_WEBHOOK_SECRET_prod"
-            "SES_EVENT_INNGEST_WEBHOOK_SECRET_staging"
-            "SYNTHESIA_API_KEY_prod"
-            "SYNTHESIA_API_KEY_staging"
-            "SYNTHESIA_WEBHOOK_SECRET_prod"
-            "SYNTHESIA_WEBHOOK_SECRET_staging"
-            "TF_VAR_AIRTABLE_KEY_prod"
-            "TF_VAR_AIRTABLE_KEY_staging"
-            "TF_VAR_AWS_ACCESS_KEY_ID_prod"
-            "TF_VAR_AWS_ACCESS_KEY_ID_staging"
-            "TF_VAR_AWS_KEY_prod"
-            "TF_VAR_AWS_KEY_staging"
-            "TF_VAR_AWS_PATHOLOGY_BUCKET_prod"
-            "TF_VAR_AWS_PATHOLOGY_BUCKET_staging"
-            "TF_VAR_AWS_SECRET_prod"
-            "TF_VAR_AWS_SECRET_staging"
-            "TF_VAR_AWS_SECRET_ACCESS_KEY_prod"
-            "TF_VAR_AWS_SECRET_ACCESS_KEY_staging"
-            "TF_VAR_CALENDLY_API_KEY_prod"
-            "TF_VAR_CALENDLY_API_KEY_staging"
-            "TF_VAR_CALENDLY_WEBHOOK_SIGNING_KEY_prod"
-            "TF_VAR_CALENDLY_WEBHOOK_SIGNING_KEY_staging"
-            "TF_VAR_CAL_API_KEY_prod"
-            "TF_VAR_CAL_API_KEY_staging"
-            "TF_VAR_CAL_SECRET_KEY_prod"
-            "TF_VAR_CAL_SECRET_KEY_staging"
-            "TF_VAR_CLAUDE_API_KEY_prod"
-            "TF_VAR_CLAUDE_API_KEY_staging"
-            "TF_VAR_CLERK_WEBHOOK_SECRET_prod"
-            "TF_VAR_CLERK_WEBHOOK_SECRET_staging"
-            "TF_VAR_DATABASE_NAME_prod"
-            "TF_VAR_DATABASE_NAME_staging"
-            "TF_VAR_DATABASE_PASSWORD_prod"
-            "TF_VAR_DATABASE_PASSWORD_staging"
-            "TF_VAR_DATABASE_USER_prod"
-            "TF_VAR_DATABASE_USER_staging"
-            "TF_VAR_DEXA_PROCESSOR_ID_prod"
-            "TF_VAR_DEXA_PROCESSOR_ID_staging"
-            "TF_VAR_INNGEST_DEV_prod"
-            "TF_VAR_INNGEST_DEV_staging"
-            "TF_VAR_INNGEST_ENV_prod"
-            "TF_VAR_INNGEST_ENV_staging"
-            "TF_VAR_INNGEST_EVENT_KEY_prod"
-            "TF_VAR_INNGEST_EVENT_KEY_staging"
-            "TF_VAR_INNGEST_SIGNING_KEY_prod"
-            "TF_VAR_INNGEST_SIGNING_KEY_staging"
-            "TF_VAR_JOBS_CLERK_PUBLISHABLE_KEY_prod"
-            "TF_VAR_JOBS_CLERK_PUBLISHABLE_KEY_staging"
-            "TF_VAR_JOBS_CLERK_SECRET_KEY_prod"
-            "TF_VAR_JOBS_CLERK_SECRET_KEY_staging"
-            "TF_VAR_OPENAI_API_KEY_prod"
-            "TF_VAR_OPENAI_API_KEY_staging"
-            "TF_VAR_PATIENT_CLERK_PUBLISHABLE_KEY_NEW_prod"
-            "TF_VAR_PATIENT_CLERK_PUBLISHABLE_KEY_NEW_staging"
-            "TF_VAR_PATIENT_CLERK_SECRET_KEY_prod"
-            "TF_VAR_PATIENT_CLERK_SECRET_KEY_staging"
-            "TF_VAR_PMS_CLERK_PUBLISHABLE_KEY_prod"
-            "TF_VAR_PMS_CLERK_PUBLISHABLE_KEY_staging"
-            "TF_VAR_PMS_CLERK_SECRET_KEY_prod"
-            "TF_VAR_PMS_CLERK_SECRET_KEY_staging"
-            "TF_VAR_STRIPE_PUBLISHABLE_KEY_prod"
-            "TF_VAR_STRIPE_PUBLISHABLE_KEY_staging"
-            "TF_VAR_STRIPE_SECRET_KEY_prod"
-            "TF_VAR_STRIPE_SECRET_KEY_staging"
-            "TF_VAR_STRIPE_WEBHOOK_SECRET_prod"
-            "TF_VAR_STRIPE_WEBHOOK_SECRET_staging"
-            "TF_VAR_STRIPE_WEBHOOK_SECRET_INNGEST_prod"
-            "TF_VAR_STRIPE_WEBHOOK_SECRET_INNGEST_staging"
-            "TF_VAR_TWILIO_ACCOUNT_SID_prod"
-            "TF_VAR_TWILIO_ACCOUNT_SID_staging"
-            "TF_VAR_TWILIO_AUTH_TOKEN_prod"
-            "TF_VAR_TWILIO_AUTH_TOKEN_staging"
-            "TF_VAR_TYPEFORM_SECRET_prod"
-            "TF_VAR_TYPEFORM_SECRET_staging"
-            "VELLUM_API_KEY_prod"
-            "VELLUM_API_KEY_staging"
+            "SYNTHESIA_API_KEY-prod"
+            "SYNTHESIA_API_KEY-staging"
+            "SYNTHESIA_WEBHOOK_SECRET-prod"
+            "SYNTHESIA_WEBHOOK_SECRET-staging"
+            "TF_VAR_AIRTABLE_KEY-prod"
+            "TF_VAR_AIRTABLE_KEY-staging"
+            "TF_VAR_AWS_ACCESS_KEY_ID-prod"
+            "TF_VAR_AWS_ACCESS_KEY_ID-staging"
+            "TF_VAR_AWS_KEY-prod"
+            "TF_VAR_AWS_KEY-staging"
+            "TF_VAR_AWS_PATHOLOGY_BUCKET-prod"
+            "TF_VAR_AWS_PATHOLOGY_BUCKET-staging"
+            "TF_VAR_AWS_SECRET-prod"
+            "TF_VAR_AWS_SECRET-staging"
+            "TF_VAR_AWS_SECRET_ACCESS_KEY-prod"
+            "TF_VAR_AWS_SECRET_ACCESS_KEY-staging"
+            "TF_VAR_CALENDLY_API_KEY-prod"
+            "TF_VAR_CALENDLY_API_KEY-staging"
+            "TF_VAR_CALENDLY_WEBHOOK_SIGNING_KEY-prod"
+            "TF_VAR_CALENDLY_WEBHOOK_SIGNING_KEY-staging"
+            "TF_VAR_CAL_API_KEY-prod"
+            "TF_VAR_CAL_API_KEY-staging"
+            "TF_VAR_CAL_SECRET_KEY-prod"
+            "TF_VAR_CAL_SECRET_KEY-staging"
+            "TF_VAR_CLAUDE_API_KEY-prod"
+            "TF_VAR_CLAUDE_API_KEY-staging"
+            "TF_VAR_CLERK_WEBHOOK_SECRET-prod"
+            "TF_VAR_CLERK_WEBHOOK_SECRET-staging"
+            "TF_VAR_DATABASE_NAME-prod"
+            "TF_VAR_DATABASE_NAME-staging"
+            "TF_VAR_DATABASE_PASSWORD-prod"
+            "TF_VAR_DATABASE_PASSWORD-staging"
+            "TF_VAR_DATABASE_USER-prod"
+            "TF_VAR_DATABASE_USER-staging"
+            "TF_VAR_DEXA_PROCESSOR_ID-prod"
+            "TF_VAR_DEXA_PROCESSOR_ID-staging"
+            "TF_VAR_INNGEST_DEV-prod"
+            "TF_VAR_INNGEST_DEV-staging"
+            "TF_VAR_INNGEST_ENV-prod"
+            "TF_VAR_INNGEST_ENV-staging"
+            "TF_VAR_INNGEST_EVENT_KEY-prod"
+            "TF_VAR_INNGEST_EVENT_KEY-staging"
+            "TF_VAR_INNGEST_SIGNING_KEY-prod"
+            "TF_VAR_INNGEST_SIGNING_KEY-staging"
+            "TF_VAR_JOBS_CLERK_PUBLISHABLE_KEY-prod"
+            "TF_VAR_JOBS_CLERK_PUBLISHABLE_KEY-staging"
+            "TF_VAR_JOBS_CLERK_SECRET_KEY-prod"
+            "TF_VAR_JOBS_CLERK_SECRET_KEY-staging"
+            "TF_VAR_OPENAI_API_KEY-prod"
+            "TF_VAR_OPENAI_API_KEY-staging"
+            "TF_VAR_PATIENT_CLERK_PUBLISHABLE_KEY_NEW-prod"
+            "TF_VAR_PATIENT_CLERK_PUBLISHABLE_KEY_NEW-staging"
+            "TF_VAR_PATIENT_CLERK_SECRET_KEY-prod"
+            "TF_VAR_PATIENT_CLERK_SECRET_KEY-staging"
+            "TF_VAR_PMS_CLERK_PUBLISHABLE_KEY-prod"
+            "TF_VAR_PMS_CLERK_PUBLISHABLE_KEY-staging"
+            "TF_VAR_PMS_CLERK_SECRET_KEY-prod"
+            "TF_VAR_PMS_CLERK_SECRET_KEY-staging"
+            "TF_VAR_STRIPE_PUBLISHABLE_KEY-prod"
+            "TF_VAR_STRIPE_PUBLISHABLE_KEY-staging"
+            "TF_VAR_STRIPE_SECRET_KEY-prod"
+            "TF_VAR_STRIPE_SECRET_KEY-staging"
+            "TF_VAR_STRIPE_WEBHOOK_SECRET-prod"
+            "TF_VAR_STRIPE_WEBHOOK_SECRET-staging"
+            "TF_VAR_STRIPE_WEBHOOK_SECRET_INNGEST-prod"
+            "TF_VAR_STRIPE_WEBHOOK_SECRET_INNGEST-staging"
+            "TF_VAR_TWILIO_ACCOUNT_SID-prod"
+            "TF_VAR_TWILIO_ACCOUNT_SID-staging"
+            "TF_VAR_TWILIO_AUTH_TOKEN-prod"
+            "TF_VAR_TWILIO_AUTH_TOKEN-staging"
+            "TF_VAR_TYPEFORM_SECRET-prod"
+            "TF_VAR_TYPEFORM_SECRET-staging"
+            "VELLUM_API_KEY-prod"
+            "VELLUM_API_KEY-staging"
           )
 
           for secret in "${secrets[@]}"; do
             raw_name="$secret"
-            gcp_secret_name="$secret"
-            if [[ "$secret" == TF_VAR_* ]]; then
-              gcp_secret_name="${secret#TF_VAR_}"
-            fi
+            gcp_name="${raw_name#TF_VAR_}"
 
-            echo "Would create secret: $gcp_secret_name"
-            # echo "${{ secrets[$raw_name] }}" | gcloud secrets create "$gcp_secret_name" \
-            #   --project="${{ env.GCP_PROJECT_ID }}" \
-            #   --replication-policy="automatic" \
-            #   --labels="migrated-from=github" 2>/dev/null || true
+            echo "Would create GCP secret: $gcp_name"
+            echo "With GitHub secret: $raw_name"
 
-            # echo "${{ secrets[$raw_name] }}" | gcloud secrets versions add "$gcp_secret_name" \
-            #   --project="${{ env.GCP_PROJECT_ID }}" \
+            # Uncomment below to actually create and push secrets
+            # echo "${{ secrets[$raw_name] }}" | gcloud secrets versions add "$gcp_name" \
+            #   --project="${GCP_PROJECT_ID}" \
             #   --data-file=-
           done
 
-          echo "✅ Declared secret migration complete (dry run)."
+          echo "✅ Dry run complete. GCP secrets were not actually created."
